@@ -1,5 +1,5 @@
 /**
- *    Copyright 2009-2016 the original author or authors.
+ *    Copyright 2009-2020 the original author or authors.
  *
  *    Licensed under the Apache License, Version 2.0 (the "License");
  *    you may not use this file except in compliance with the License.
@@ -15,13 +15,14 @@
  */
 package org.apache.ibatis.type;
 
-import static org.junit.Assert.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertNull;
 import static org.mockito.Mockito.verify;
 import static org.mockito.Mockito.when;
 
-import org.junit.Test;
+import org.junit.jupiter.api.Test;
 
-public class LongTypeHandlerTest extends BaseTypeHandlerTest {
+class LongTypeHandlerTest extends BaseTypeHandlerTest {
 
   private static final TypeHandler<Long> TYPE_HANDLER = new LongTypeHandler();
 
@@ -35,40 +36,49 @@ public class LongTypeHandlerTest extends BaseTypeHandlerTest {
   @Override
   @Test
   public void shouldGetResultFromResultSetByName() throws Exception {
-    when(rs.getLong("column")).thenReturn(100L);
-    when(rs.wasNull()).thenReturn(false);
-    assertEquals(new Long(100L), TYPE_HANDLER.getResult(rs, "column"));
+    when(rs.getLong("column")).thenReturn(100L, 0L);
+    assertEquals(Long.valueOf(100L), TYPE_HANDLER.getResult(rs, "column"));
+    assertEquals(Long.valueOf(0L), TYPE_HANDLER.getResult(rs, "column"));
   }
 
   @Override
+  @Test
   public void shouldGetResultNullFromResultSetByName() throws Exception {
-    // Unnecessary
+    when(rs.getLong("column")).thenReturn(0L);
+    when(rs.wasNull()).thenReturn(true);
+    assertNull(TYPE_HANDLER.getResult(rs, "column"));
   }
 
   @Override
   @Test
   public void shouldGetResultFromResultSetByPosition() throws Exception {
-    when(rs.getLong(1)).thenReturn(100L);
-    when(rs.wasNull()).thenReturn(false);
-    assertEquals(new Long(100L), TYPE_HANDLER.getResult(rs, 1));
+    when(rs.getLong(1)).thenReturn(100L, 0L);
+    assertEquals(Long.valueOf(100L), TYPE_HANDLER.getResult(rs, 1));
+    assertEquals(Long.valueOf(0L), TYPE_HANDLER.getResult(rs, 1));
   }
 
   @Override
+  @Test
   public void shouldGetResultNullFromResultSetByPosition() throws Exception {
-    // Unnecessary
+    when(rs.getLong(1)).thenReturn(0L);
+    when(rs.wasNull()).thenReturn(true);
+    assertNull(TYPE_HANDLER.getResult(rs, 1));
   }
 
   @Override
   @Test
   public void shouldGetResultFromCallableStatement() throws Exception {
-    when(cs.getLong(1)).thenReturn(100L);
-    when(cs.wasNull()).thenReturn(false);
-    assertEquals(new Long(100L), TYPE_HANDLER.getResult(cs, 1));
+    when(cs.getLong(1)).thenReturn(100L, 0L);
+    assertEquals(Long.valueOf(100L), TYPE_HANDLER.getResult(cs, 1));
+    assertEquals(Long.valueOf(0L), TYPE_HANDLER.getResult(cs, 1));
   }
 
   @Override
+  @Test
   public void shouldGetResultNullFromCallableStatement() throws Exception {
-    // Unnecessary
+    when(cs.getLong(1)).thenReturn(0L);
+    when(cs.wasNull()).thenReturn(true);
+    assertNull(TYPE_HANDLER.getResult(cs, 1));
   }
 
 }
